--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "format:check": "prettier --check .",
     "preview": "vite preview",
     "test": "vitest",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "prebuild": "npm run lint && npm run format:check",
+    "pretest": "npm run lint"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
