--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^6.4.7",
+    "@supabase/supabase-js": "^2.57.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
