feat: implement script-based environment configuration
- Replace .env.local with scripts/set-dev-env.sh.template approach
- Add npm run dev:env script for convenient development
- Update .gitignore to exclude actual credentials script
- Provide template file that users copy and customize
- Update all documentation to reflect new workflow

Benefits:
✅ More secure - actual credentials never committed
✅ Flexible - easy to switch between environments
✅ Convenient - npm run dev:env starts everything
✅ Clear setup - copy template, edit, run

Usage:
1. cp scripts/set-dev-env.sh.template scripts/set-dev-env.sh
2. Edit with your Supabase credentials
3. npm run dev:env

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ dist
 dist-ssr
 *.local
 
+# Environment scripts with real credentials (copy from .template)
+scripts/set-dev-env.sh
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
