feat: add Netlify deployment configuration and environment setup
- Add netlify.toml with build settings, security headers, and SPA routing
- Create DEPLOYMENT.md with complete setup instructions
- Add scripts/set-netlify-env.sh.template for environment management
- Fix netlify.toml syntax error (duplicate build.environment section)
- Update SUPABASE_SETUP.md with latest configuration
- Maintain debugging logs in claim functionality per user request

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ dist-ssr
 
 # Environment scripts with real credentials (copy from .template)
 scripts/set-dev-env.sh
+scripts/set-netlify-env.sh
 
 # Editor directories and files
 .vscode/*
