--- a/.netlify/netlify.toml
+++ b/.netlify/netlify.toml
@@ -1,8 +1,6 @@
+headersOrigin = "config"
+redirectsOrigin = "config"
 plugins = []
-functionsDirectory = "/home/florent/personal-dev/fruits/fruits-app/netlify/functions"
-functionsDirectoryOrigin = "config-v1"
-headers = []
-redirects = []
 
 [functions]
 
@@ -13,9 +11,11 @@ publish = "/home/florent/personal-dev/fruits/fruits-app/dist"
 publishOrigin = "config"
 commandOrigin = "config"
 command = "npm run build"
-functions = "/home/florent/personal-dev/fruits/fruits-app/netlify/functions"
 
 [build.environment]
+NODE_VERSION = "18"
+GENERATE_SOURCEMAP = "false"
+CI = "false"
 
 [build.processing]
 
@@ -28,3 +28,30 @@ functions = "/home/florent/personal-dev/fruits/fruits-app/netlify/functions"
 [build.processing.js]
 
 [build.services]
+
+[[headers]]
+for = "/*"
+
+[headers.values]
+X-Frame-Options = "DENY"
+X-Content-Type-Options = "nosniff"
+Referrer-Policy = "strict-origin-when-cross-origin"
+Cache-Control = "public, max-age=31536000"
+
+[[headers]]
+for = "*.html"
+
+[headers.values]
+Cache-Control = "public, max-age=0, must-revalidate"
+
+[[redirects]]
+from = "/*"
+to = "/index.html"
+status = 200.0
+force = false
+
+[redirects.query]
+
+[redirects.conditions]
+
+[redirects.headers]
