--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "fruits-app",
+  "name": "fruits-boys",
+  "description": "Youth football team fruit scheduling app - Parents volunteer to bring fruits for games",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
