feat: add conditional logger utility and fix race condition
- Add src/lib/logger.ts with environment-controlled logging
- Fix race condition in claimGame using atomic Supabase update
- Replace console.log calls with logger.log in production code
- Add VITE_DEBUG env var to control production logging
- All tests passing

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ VITE_SUPABASE_ANON_KEY=
 
 # Manager PIN
 VITE_MANAGER_PIN=1234
+
+# Debug logging (set to 'true' to enable in production)
+VITE_DEBUG=false
